--- a/dev/blocks/phone-drop/phone-drop.pug
+++ b/dev/blocks/phone-drop/phone-drop.pug
@@ -5,10 +5,10 @@ mixin phone-drop()
 		.phone-drop__inner
 			.phone-drop__img
 				svg.phone-drop__icon.svg
-					use(xlink:href='img/svgSprite.svg#icon__phone')
+					use(xlink:href='/img/svgSprite.svg#icon__phone')
 			a.phone-drop__link(href='tel:88432788654') +7 843 278 86 54
 			.phone-drop__trigger.js-drop-trigger
 				svg.phone-drop__icon.svg
-					use(xlink:href='img/svgSprite.svg#icon__triangle')
+					use(xlink:href='/img/svgSprite.svg#icon__triangle')
 		.phone-drop__inner
 			a.phone-drop__link(href='tel:89673683323') +7 967 36 83 323
