--- a/dev/pages/vacancy.pug
+++ b/dev/pages/vacancy.pug
@@ -52,7 +52,7 @@ block pageMain
 				.vacancy-apply
 					.vacancy-apply__inner
 						svg.vacancy-apply__icon.svg
-							use(xlink:href='img/svgSprite.svg#icon__apply')
+							use(xlink:href='/img/svgSprite.svg#icon__apply')
 						.vacancy-apply__info
 							.vacancy-apply__title Понравилась вакансия?
 							.vacancy-apply__descr Если вам понравилась наша вакансия, вы подходите под эти критерии или у вас есть желание попробовать силы, откликнитесь на неё
