--- a/dev/pug/layout__part_footer.pug
+++ b/dev/pug/layout__part_footer.pug
@@ -5,7 +5,7 @@
 				.footer-grid
 					.footer-grid__item
 						svg.footer__logo.svg
-							use(xlink:href='img/svgSprite.svg#logo_as')
+							use(xlink:href='/img/svgSprite.svg#logo_as')
 					.footer-grid__item
 						+footer-unit('О компании')
 							+footer-links(
