--- a/dev/blocks/button/button.scss
+++ b/dev/blocks/button/button.scss
@@ -8,6 +8,7 @@
 	border-radius: 100px;
 	box-shadow: 0 13px 32px rgba(0,53,105,.31);
 	color: #fff;
+	cursor: pointer;
 	display: inline-block;
 	font-size: 19px;
 	line-height: 120%;
