--- a/dev/pages/production.pug
+++ b/dev/pages/production.pug
@@ -1,7 +1,18 @@
 extends ../pug/layout_default.pug
 
 block pageHeader
-	+header('Продукция', false)
+	//-+header('Продукция', false)
+	+header(
+		'О компании',
+		true,
+		[
+			{active: false, link: 'О нас', url: '/about.html#about'},
+			{active: false, link: 'Консультационные услуги', url: '/about.html#services'},
+			{active: false, link: 'О производстве', url: '/about.html#prod'},
+			{active: false, link: 'О лаборатории', url: '/about.html#lab'},
+			{active: false, link: 'Вакансии', url: '/about.html#vacancy'}
+		]
+	)
 
 block pageMain
 	.grid
