--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -27,6 +27,7 @@
 @import "dev/blocks/grid/grid.scss";
 @import "dev/blocks/header/header.scss";
 @import "dev/blocks/input/input.scss";
+@import "dev/blocks/link/link.scss";
 @import "dev/blocks/nav/nav.scss";
 @import "dev/blocks/page/page.scss";
 @import "dev/blocks/phone-drop/phone-drop.scss";
