--- a/dev/pages/production.pug
+++ b/dev/pages/production.pug
@@ -21,22 +21,25 @@ block pageMain
 				+prod-tiles(
 					[
 						{
-							class: 'milk',
+							class: 'light',
 							title: 'Для повышения удоев',
 							isDescr: true,
-							descr: 'Для хорошей продуктивности в рационе надлежит добавлять минералы, микроэлементы, витамины'
+							descr: 'Для хорошей продуктивности в рационе надлежит добавлять минералы, микроэлементы, витамины',
+							img: 'milk',
 						},
 						{
-							class: 'cow',
+							class: 'middle',
 							title: 'Корма для здоровья коров',
 							isDescr: true,
-							descr: 'Характерной особенностью кормления молочных голштинских коров является высокая обеспеченность рационов концентрированными кормами'
+							descr: 'Характерной особенностью кормления молочных голштинских коров является высокая обеспеченность рационов концентрированными кормами',
+							img: 'cow',
 						},
 						{
-							class: 'calf',
+							class: 'dark',
 							title: 'Корма для выращивания телят',
 							isDescr: true,
-							descr: 'Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление'
+							descr: 'Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление',
+							img: 'calf',
 						}
 					]
 				)
