--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -9,6 +9,7 @@ include ../blocks/footer-links/footer-links.pug
 include ../blocks/footer-unit/footer-unit.pug
 include ../blocks/header/header.pug
 include ../blocks/nav/nav.pug
+include ../blocks/pagination/pagination.pug
 include ../blocks/phone-drop/phone-drop.pug
 include ../blocks/points/points.pug
 include ../blocks/popup/popup.pug
