--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -30,6 +30,7 @@
 @import "dev/blocks/link/link.scss";
 @import "dev/blocks/nav/nav.scss";
 @import "dev/blocks/page/page.scss";
+@import "dev/blocks/pagination/pagination.scss";
 @import "dev/blocks/phone-drop/phone-drop.scss";
 @import "dev/blocks/points/points.scss";
 @import "dev/blocks/popup/popup.scss";
