--- a/dev/blocks/prod-grid/prod-grid.scss
+++ b/dev/blocks/prod-grid/prod-grid.scss
@@ -29,7 +29,7 @@
 		align-items: center;
 		display: flex;
 		justify-content: center;
-		margin-top: -40px;
+		//-margin-top: -40px;
 		min-height: 230px;
 		img {
 			max-height: 230px;
