--- a/dev/blocks/prod-tiles/prod-tiles.pug
+++ b/dev/blocks/prod-tiles/prod-tiles.pug
@@ -9,3 +9,6 @@ mixin prod-tiles(items)
 					.prod-tiles__descr!= item.descr
 				.prod-tiles__link Подробнее
 					span
+				.prod-tiles__img
+					svg.svg
+						use(xlink:href='/img/svgSprite.svg#img__' + item.img)
