--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -58,16 +58,19 @@ block pageMain
 						+services-tiles(
 							[
 								{
-									class: 'audit',
+									class: 'dark',
 									title: 'Аудит хозяйств',
+									img: 'audit'
 								},
 								{
-									class: 'diet',
+									class: 'middle',
 									title: 'Расчет рациона',
+									img: 'diet'
 								},
 								{
-									class: 'lab',
+									class: 'light',
 									title: 'Лабораторные исследования',
+									img: 'lab'
 								}
 							]
 						)
