--- a/dev/blocks/nav/nav.pug
+++ b/dev/blocks/nav/nav.pug
@@ -4,5 +4,5 @@ mixin nav(isSide)
 	.nav(class= isSide ? 'nav_sidenav' : '')
 		a.nav__item(href='/about.html') О компании
 		a.nav__item(href='/production.html') Продукция
-		a.nav__item(href='#') Услуги
+		a.nav__item(href='/services.html') Услуги
 		a.nav__item(href='/contacts.html') Контакты
