--- a/dev/pages/production.pug
+++ b/dev/pages/production.pug
@@ -1,9 +1,8 @@
 extends ../pug/layout_default.pug
 
 block pageHeader
-	//-+header('Продукция', false)
 	+header(
-		'О компании',
+		'Продукция',
 		true,
 		[
 			{active: false, link: 'О нас', url: '/about.html#about'},
