--- a/dev/pages/404.pug
+++ b/dev/pages/404.pug
@@ -7,8 +7,13 @@ block pageHeader
 	)
 
 block pageMain
-	.grid
-		.grid__row
-			.grid__col
-				h2.page__title.page__title_1 Ошибка 404
-				p.page__p Запрашиваемая вами страница не существует. Проверьте правильность написания адреса или перейдите на <a href='/' class='link'>главную страницу</a>.
+	+subheader(
+		'Страницы не существует',
+		false
+	)
+	section.section.section_pb
+		.grid
+			.grid__row
+				.grid__col
+					h2.page__title.page__title_1 Ошибка 404
+					p.page__p Запрашиваемая вами страница не существует. Проверьте правильность написания адреса или перейдите на <a href='/' class='link'>главную страницу</a>.
