--- a/dev/pages/index.pug
+++ b/dev/pages/index.pug
@@ -4,7 +4,7 @@ block variables
 	- var isMainPage = true;
 
 block pageHeader
-	+header('title', false, 'sub')
+	+header('Главная')
 
 block pageMain
 	section.welcome
@@ -81,7 +81,7 @@ block pageMain
 							{icon: '12',title: '12 лет на рынке'}
 						]
 					)
-	section.section
+	section.section.section_pb
 		.grid
 			.grid__row
 				.grid__col.grid__col_lg_7
