--- a/dev/pages/product.pug
+++ b/dev/pages/product.pug
@@ -1,7 +1,10 @@
 extends ../pug/layout_default.pug
 
 block pageHeader
-	+header(
+	+header('Продукция')
+
+block pageMain
+	+subheader(
 		'Продукция',
 		true,
 		[
@@ -12,72 +15,71 @@ block pageHeader
 			{active: false, link: 'Премиксы', url: '#'}
 		]
 	)
-
-block pageMain
-	.grid
-		.grid__row
-			.grid__col
-				.prod
-					.prod__inner
-						.prod__img
-							img(src='/img/product-full.png' alt='')
-						.prod__info
-							+back()
-							h2.page__title.prod__title БМВЛ для телят АСТ/105
-							p.page__p.prod__descr витаминно-минеральный коктейль для добавления в цельное молоко
-							.prod__list
-								.prod__list-key Вид:
-								.prod__list-value Порошок желтого цвета легкорастворимый в воде
-								.prod__list-key Упаковка:
-								.prod__list-value Пластиковое ведро 7,5 кг с дозировочной ложкой
-								.prod__list-key Срок годности:
-								.prod__list-value 24 месяца
-							a.prod__button.button.js-popup(href='#popup-price') Узнать цену
-							.prod__file
-								.prod__file-icon
-									svg.svg
-										use(xlink:href='/img/svgSprite.svg#icon__pdf_download')
-								.prod__file-inner
-									.prod__file-title Иструкция по применению
-									.prod__file-row
-										a.prod__file-link(href='#', download) Скачать
-										span.prod__file-type (.pdf)
-	.prod-tabs
+	section.section
 		.grid
 			.grid__row
 				.grid__col
-					.prod-tabs__top
-						.prod-tabs__inner
-							.prod-tabs__item.prod-tabs__item_active Описание
-							.prod-tabs__item Способ применения и дозировка
-							.prod-tabs__item Состав
-							.prod-tabs__item Характеристики
-		.prod-tabs-content
+					.prod
+						.prod__inner
+							.prod__img
+								img(src='/img/product-full.png' alt='')
+							.prod__info
+								+back()
+								h2.page__title.prod__title БМВЛ для телят АСТ/105
+								p.page__p.prod__descr витаминно-минеральный коктейль для добавления в цельное молоко
+								.prod__list
+									.prod__list-key Вид:
+									.prod__list-value Порошок желтого цвета легкорастворимый в воде
+									.prod__list-key Упаковка:
+									.prod__list-value Пластиковое ведро 7,5 кг с дозировочной ложкой
+									.prod__list-key Срок годности:
+									.prod__list-value 24 месяца
+								a.prod__button.button.js-popup(href='#popup-price') Узнать цену
+								.prod__file
+									.prod__file-icon
+										svg.svg
+											use(xlink:href='/img/svgSprite.svg#icon__pdf_download')
+									.prod__file-inner
+										.prod__file-title Иструкция по применению
+										.prod__file-row
+											a.prod__file-link(href='#', download) Скачать
+											span.prod__file-type (.pdf)
+		.prod-tabs
 			.grid
 				.grid__row
 					.grid__col
-						.prod-tabs-content__inner
-							.prod-tabs-content__item.prod-tabs-content__item_active
-								p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят. Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
-							.prod-tabs-content__item
-								h3 Заголовок первого уровня
-								p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма.
-								p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко.
-								h4 Заголовок второго уровня
-								p Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
-								ul
-									li Пункт номер 1
-									li Пункт номер 2
-									li Снижает риск возникновения диареи у телят.
-								h5 Заголовок третьего уровня
-								ol
-									li Пункт номер 1
-									li Пункт номер 2
-									li Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко.
-							.prod-tabs-content__item
-								p Состав
-							.prod-tabs-content__item
-								p Характеристики
+						.prod-tabs__top
+							.prod-tabs__inner
+								.prod-tabs__item.prod-tabs__item_active Описание
+								.prod-tabs__item Способ применения и дозировка
+								.prod-tabs__item Состав
+								.prod-tabs__item Характеристики
+			.prod-tabs-content
+				.grid
+					.grid__row
+						.grid__col
+							.prod-tabs-content__inner
+								.prod-tabs-content__item.prod-tabs-content__item_active
+									p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят. Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
+								.prod-tabs-content__item
+									h3 Заголовок первого уровня
+									p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко. Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма.
+									p Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко.
+									h4 Заголовок второго уровня
+									p Применяют для нормализации обмена веществ у телят в молочном периоде и повышения резистентности организма. Снижает риск возникновения диареи у телят.
+									ul
+										li Пункт номер 1
+										li Пункт номер 2
+										li Снижает риск возникновения диареи у телят.
+									h5 Заголовок третьего уровня
+									ol
+										li Пункт номер 1
+										li Пункт номер 2
+										li Кормовая добавка для увеличения привесов и решения проблем телят в виде витаминно-минерального коктейля для добавления в цельное молоко.
+								.prod-tabs-content__item
+									p Состав
+								.prod-tabs-content__item
+									p Характеристики
 
 block templates
 	+popup-price
