--- a/dev/pages/production-list.pug
+++ b/dev/pages/production-list.pug
@@ -1,7 +1,10 @@
 extends ../pug/layout_default.pug
 
 block pageHeader
-	+header(
+	+header('Продукция')
+
+block pageMain
+	+subheader(
 		'Продукция',
 		true,
 		[
@@ -12,36 +15,35 @@ block pageHeader
 			{active: false, link: 'Премиксы', url: '#'}
 		]
 	)
-
-block pageMain
-	.grid
-		.grid__row
-			.grid__col
-				+back()
-				h2.page__title.page__title_1 Корма для выращивания телят
-				p.page__p Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление.
-				+prod-grid(
-					[
-						{
-							title: 'Диарвит',
-							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
-						},
-						{
-							title: 'Хелпмилк',
-							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
-						},
-						{
-							title: 'Престартер',
-							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
-						},
-						{
-							title: 'БМВЛ для телят АСТ/105',
-							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
-						},
-						{
-							title: 'БМВЛ для телят АСТ/106',
-							descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
-						},
-					]
-				)
-				+pagination
+	section.section.section_pb
+		.grid
+			.grid__row
+				.grid__col
+					+back()
+					h2.page__title.page__title_1 Корма для выращивания телят
+					p.page__p Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление.
+					+prod-grid(
+						[
+							{
+								title: 'Диарвит',
+								descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+							},
+							{
+								title: 'Хелпмилк',
+								descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+							},
+							{
+								title: 'Престартер',
+								descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+							},
+							{
+								title: 'БМВЛ для телят АСТ/105',
+								descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+							},
+							{
+								title: 'БМВЛ для телят АСТ/106',
+								descr: 'витаминно-минеральный коктейль для добавления в цельное молоко'
+							},
+						]
+					)
+					+pagination
