--- a/dev/pages/production.pug
+++ b/dev/pages/production.pug
@@ -1,7 +1,10 @@
 extends ../pug/layout_default.pug
 
 block pageHeader
-	+header(
+	+header('Продукция')
+
+block pageMain
+	+subheader(
 		'Продукция',
 		true,
 		[
@@ -12,33 +15,32 @@ block pageHeader
 			{active: false, link: 'Вакансии', url: '/about.html#vacancy'}
 		]
 	)
-
-block pageMain
-	.grid
-		.grid__row
-			.grid__col
-				+prod-tiles(
-					[
-						{
-							class: 'light',
-							title: 'Для повышения удоев',
-							isDescr: true,
-							descr: 'Для хорошей продуктивности в рационе надлежит добавлять минералы, микроэлементы, витамины',
-							img: 'milk',
-						},
-						{
-							class: 'middle',
-							title: 'Корма для здоровья коров',
-							isDescr: true,
-							descr: 'Характерной особенностью кормления молочных голштинских коров является высокая обеспеченность рационов концентрированными кормами',
-							img: 'cow',
-						},
-						{
-							class: 'dark',
-							title: 'Корма для выращивания телят',
-							isDescr: true,
-							descr: 'Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление',
-							img: 'calf',
-						}
-					]
-				)
+	section.section.section_pb
+		.grid
+			.grid__row
+				.grid__col
+					+prod-tiles(
+						[
+							{
+								class: 'light',
+								title: 'Для повышения удоев',
+								isDescr: true,
+								descr: 'Для хорошей продуктивности в рационе надлежит добавлять минералы, микроэлементы, витамины',
+								img: 'milk',
+							},
+							{
+								class: 'middle',
+								title: 'Корма для здоровья коров',
+								isDescr: true,
+								descr: 'Характерной особенностью кормления молочных голштинских коров является высокая обеспеченность рационов концентрированными кормами',
+								img: 'cow',
+							},
+							{
+								class: 'dark',
+								title: 'Корма для выращивания телят',
+								isDescr: true,
+								descr: 'Залогом здоровья и продуктивности коров, роста прибыли и устойчивого развития бизнеса является сбалансированное кормление',
+								img: 'calf',
+							}
+						]
+					)
