--- a/dev/pages/vacancy.pug
+++ b/dev/pages/vacancy.pug
@@ -1,7 +1,10 @@
 extends ../pug/layout_default.pug
 
 block pageHeader
-	+header(
+	+header('Вакансия')
+
+block pageMain
+	+subheader(
 		'Вакансия',
 		true,
 		[
@@ -12,51 +15,50 @@ block pageHeader
 			{active: true, link: 'Вакансии', url: '#'}
 		]
 	)
-
-block pageMain
-	.grid
-		.grid__row
-			.grid__col
-				+back()
-				h2.page__title Консультант-эксперт по крупному рогатому скоту (Волгоградская, Ярославская, Костромская, Ивановская области)
-				+vacancy-tiles(
-					[
-						{icon: 'clock', key: 'Дата размещения', value: '2 июня 2020'},
-						{icon: 'pin', key: 'Регион', value: 'Татарстан, Казань'}
-					]
-				)
-		.grid__row
-			.grid__col.grid__col_lg_7
-				.vacancy
-					h3 Требования
-					ul
-						li высшее образование (зоотехническое/ветеринарное)
-						li опыт работы в хозяйстве, занимающемся разведением и выращиванием крупного рогатого скота в качестве зоотехника или вет. врача от 3-х лет
-						li разъездной характер работы — 70 % рабочего времени по вверенной территории (Волгоградской, Ярославской, Костромской, Ивановской области)
-						li навыки зоотехнии, кормления, ведение переговоров, высокие коммуникативные навыки
-						li уверенный пользователь ПК
-					h3 Условия
-					ul
-						li «белая» заработная плата
-						li официальное трудоустройство
-						li обеспечение мобильной связью
-						li предоставление служебного автомобиля
-						li предоставление ПК
-					h3 Обязанности
-					ul
-						li работа с менеджером
-						li ведение, консультирование хозяйств
-						li проведение аудита хозяйств
-						li оценка кормовой базы хозяйств, расчет рационов, в т. ч. их экономической эффективности
-			.grid__col.grid__col_lg_5
-				.vacancy-apply
-					.vacancy-apply__inner
-						svg.vacancy-apply__icon.svg
-							use(xlink:href='/img/svgSprite.svg#icon__apply')
-						.vacancy-apply__info
-							.vacancy-apply__title Понравилась вакансия?
-							.vacancy-apply__descr Если вам понравилась наша вакансия, вы подходите под эти критерии или у вас есть желание попробовать силы, откликнитесь на неё
-					a.vacancy-apply__button.button.js-popup(href='#popup-vacancy') Откликнуться на вакансию
+	section.section.section_pb
+		.grid
+			.grid__row
+				.grid__col
+					+back()
+					h2.page__title Консультант-эксперт по крупному рогатому скоту (Волгоградская, Ярославская, Костромская, Ивановская области)
+					+vacancy-tiles(
+						[
+							{icon: 'clock', key: 'Дата размещения', value: '2 июня 2020'},
+							{icon: 'pin', key: 'Регион', value: 'Татарстан, Казань'}
+						]
+					)
+			.grid__row
+				.grid__col.grid__col_lg_7
+					.vacancy
+						h3 Требования
+						ul
+							li высшее образование (зоотехническое/ветеринарное)
+							li опыт работы в хозяйстве, занимающемся разведением и выращиванием крупного рогатого скота в качестве зоотехника или вет. врача от 3-х лет
+							li разъездной характер работы — 70 % рабочего времени по вверенной территории (Волгоградской, Ярославской, Костромской, Ивановской области)
+							li навыки зоотехнии, кормления, ведение переговоров, высокие коммуникативные навыки
+							li уверенный пользователь ПК
+						h3 Условия
+						ul
+							li «белая» заработная плата
+							li официальное трудоустройство
+							li обеспечение мобильной связью
+							li предоставление служебного автомобиля
+							li предоставление ПК
+						h3 Обязанности
+						ul
+							li работа с менеджером
+							li ведение, консультирование хозяйств
+							li проведение аудита хозяйств
+							li оценка кормовой базы хозяйств, расчет рационов, в т. ч. их экономической эффективности
+				.grid__col.grid__col_lg_5
+					.vacancy-apply
+						.vacancy-apply__inner
+							svg.vacancy-apply__icon.svg
+								use(xlink:href='/img/svgSprite.svg#icon__apply')
+							.vacancy-apply__info
+								.vacancy-apply__title Понравилась вакансия?
+								.vacancy-apply__descr Если вам понравилась наша вакансия, вы подходите под эти критерии или у вас есть желание попробовать силы, откликнитесь на неё
+						a.vacancy-apply__button.button.js-popup(href='#popup-vacancy') Откликнуться на вакансию
 
 block templates
 	+popup-vacancy
