--- a/dev/pug/mixins.pug
+++ b/dev/pug/mixins.pug
@@ -16,6 +16,7 @@ include ../blocks/popup/popup.pug
 include ../blocks/prod-grid/prod-grid.pug
 include ../blocks/prod-tiles/prod-tiles.pug
 include ../blocks/services-tiles/services-tiles.pug
+include ../blocks/subheader/subheader.pug
 include ../blocks/subnav/subnav.pug
 include ../blocks/vacancy-list-tiles/vacancy-list-tiles.pug
 include ../blocks/vacancy-tiles/vacancy-tiles.pug
