--- a/dev/scss/style.scss
+++ b/dev/scss/style.scss
@@ -46,6 +46,7 @@
 @import "dev/blocks/slider/slider.scss";
 @import "dev/blocks/slider-side/slider-side.scss";
 @import "dev/blocks/slider-wrap/slider-wrap.scss";
+@import "dev/blocks/subheader/subheader.scss";
 @import "dev/blocks/subnav/subnav.scss";
 @import "dev/blocks/textarea/textarea.scss";
 @import "dev/blocks/vacancy/vacancy.scss";
