--- a/dev/blocks/page/page.scss
+++ b/dev/blocks/page/page.scss
@@ -9,16 +9,27 @@
 	min-height: 100%;
 	position: relative;
 	&__header {
+		background: #4671a2;
 		flex: 0 0 auto;
+		position: fixed;
+		transition: background .25s ease;
 		top: 0;
 		width: 100%;
+		z-index: 3;
+		&_mp {
+			background: transparent;
+		}
+		&_mp.page__header_bg {
+			background: #fff;
+			box-shadow: 0 0 16px rgba(0,0,0,.25);
+		}
 	}
 	&__main {
 		flex: 1 0 auto;
 		overflow: hidden;
-		padding: 40px 0;
+		//padding: 0 0 40px;
 		@media (min-width: $screen-md) {
-			padding: 64px 0;
+			//padding: 0 0 64px;
 		}
 	}
 	&__footer {
