--- a/dev/blocks/phone-drop/phone-drop.scss
+++ b/dev/blocks/phone-drop/phone-drop.scss
@@ -51,11 +51,14 @@
 		transition: color .25s ease;
 		user-select: none;
 	}
-	.header_transparent &__link {
+	.page__header_mp &__link {
 		color: #295694;
 		@media (min-width: $screen-xl) {
 			color: #fff;
 		}
+	}
+	.page__header_bg.page__header_mp &__link {
+		color: #295694 !important;
 	}
 	&_open &__link {
 		color: #295694 !important;
@@ -76,11 +79,14 @@
 			fill: #fff;
 		}
 	}
-	.header_transparent &__trigger svg {
+	.page__header_mp &__trigger svg {
 		fill: #295694;
 		@media (min-width: $screen-xl) {
 			fill: #fff;
 		}
+	}
+	.page__header_bg.page__header_mp &__trigger svg {
+		fill: #295694 !important;
 	}
 	&_open &__trigger svg {
 		fill: #295694 !important;
