--- a/dev/pages/about.pug
+++ b/dev/pages/about.pug
@@ -5,7 +5,10 @@ block variables
 	- var isAbout = true;
 
 block pageHeader
-	+header(
+	+header('О компании')
+
+block pageMain
+	+subheader(
 		'О компании',
 		true,
 		[
@@ -16,9 +19,8 @@ block pageHeader
 			{active: false, link: 'Вакансии', url: '/about.html#vacancy'}
 		]
 	)
-
-block pageMain
-	section.section#about
+	section.section
+		.section__anchor#about
 		.grid
 			.grid__row
 				.grid__col.grid__col_xl_4
@@ -48,7 +50,8 @@ block pageMain
 								.slider__bubble
 									.slider__bubble-title Заголовок 2
 									.slider__bubble-descr Описание 2
-	section.section#services
+	section.section
+		.section__anchor#services
 		.grid
 			.grid__row
 				.grid__col
@@ -75,7 +78,8 @@ block pageMain
 							]
 						)
 						//-p.page__p.page__p_secondary Портфель продукции включает в себя заменители молока, концентраты, премиксы и кормовые добавки для КРС, свиноводства и птицеводства. Высочайшие стандарты качества продукции и удовлетворенность клиентов являются ключевыми приоритетами компании
-	section.section#prod
+	section.section
+		.section__anchor#prod
 		.grid
 			.grid__row
 				.grid__col.grid__col_lg_7
@@ -104,7 +108,8 @@ block pageMain
 					.slider-side
 						h2.page__title.page__title_1 Производство
 						p.slider-side__p Высочайшие стандарты и строгий контроль качества на каждом этапе производства, передовой мировой опыт и собственные разработки позволяют «АгроСтар» выпускать лучшие на рынке корма и заменители молока для сельскохозяйственных животных
-	section.section#lab
+	section.section
+		.section__anchor#lab
 		.grid
 			.grid__row
 				.grid__col
@@ -135,7 +140,8 @@ block pageMain
 										ul.slider__lab-list
 											li - пункт 1
 											li - пункт 2
-	section.section#vacancy
+	section.section.section_pb
+		.section__anchor#vacancy
 		.grid
 			.grid__row
 				.grid__col
