~ card image fix

--- a/dev/blocks/prod-grid/prod-grid.pug
+++ b/dev/blocks/prod-grid/prod-grid.pug
@@ -5,7 +5,7 @@ mixin prod-grid(items)
 		each item, index in items
 			a.prod-grid__item(href='/product.html')
 				.prod-grid__img
-					img(src='/img/product-good.png' alt='')
+					img(src='/img/product-good.jpg' alt='')
 				.prod-grid__title!= item.title
 				.prod-grid__descr!= item.descr
 				.prod-grid__link Подробнее
