--- a/dev/blocks/prod-grid/prod-grid.scss
+++ b/dev/blocks/prod-grid/prod-grid.scss
@@ -29,11 +29,12 @@
 		align-items: center;
 		display: flex;
 		justify-content: center;
-		//-margin-top: -40px;
-		min-height: 230px;
+		max-height: 320px;
+		overflow: hidden;
+		width: 100%;
 		img {
-			max-height: 230px;
-			max-width: 230px;
+			height: 400px;
+			max-width: 100%;
 		}
 	}
 	&__title {
