~ improvements (1 — contact page and footer company)

--- a/dev/pug/layout__part_footer.pug
+++ b/dev/pug/layout__part_footer.pug
@@ -6,6 +6,7 @@
 					.footer-grid__item
 						svg.footer__logo.svg
 							use(xlink:href='/img/svgSprite.svg#logo_as')
+						.footer__company ООО «АгроСтар-Трейд+»
 					.footer-grid__item
 						+footer-unit('О компании')
 							+footer-links(
