--- a/dev/pages/contacts.pug
+++ b/dev/pages/contacts.pug
@@ -23,6 +23,13 @@ block pageMain
 						.contacts__item
 							.contacts__icon
 								svg.vacancy-apply__icon.svg
+									use(xlink:href='/img/svgSprite.svg#icon__company')
+							.contacts__info
+								.contacts__title Компания:
+								.contacts__line ООО «АгроСтар-Трейд+»
+						.contacts__item
+							.contacts__icon
+								svg.vacancy-apply__icon.svg
 									use(xlink:href='/img/svgSprite.svg#icon__phone')
 							.contacts__info
 								.contacts__title Телефоны:
