--- a/dev/scss/typography.scss
+++ b/dev/scss/typography.scss
@@ -67,6 +67,11 @@
 	font-style: normal;
 	line-height: 136%;
 }
+@mixin footer-company {
+	font-size: 14px;
+	font-weight: 500;
+	line-height: 115%;
+}
 
 @mixin popup-title {
 	font-size: 20px;
