--- a/dev/blocks/header/header.pug
+++ b/dev/blocks/header/header.pug
@@ -11,11 +11,11 @@ mixin header(title)
 						if isMainPage === true
 							.header__logo
 								svg.svg
-									use(xlink:href='/img/svgSprite.svg#logo_as')
+									use(xlink:href='/img/svgSprite.svg#logo_as_new')
 						else
 							a.header__logo(href='/')
 								svg.svg
-									use(xlink:href='/img/svgSprite.svg#logo_as')
+									use(xlink:href='/img/svgSprite.svg#logo_as_new')
 						a.header__call(href='tel:88432788654')
 							svg.header__icon.svg
 								use(xlink:href='/img/svgSprite.svg#icon__phone')
@@ -23,11 +23,11 @@ mixin header(title)
 						if isMainPage === true
 							.header__logo
 								svg.svg
-									use(xlink:href='/img/svgSprite.svg#logo_as')
+									use(xlink:href='/img/svgSprite.svg#logo_as_new')
 						else
 							a.header__logo(href='/')
 								svg.svg
-									use(xlink:href='/img/svgSprite.svg#logo_as')
+									use(xlink:href='/img/svgSprite.svg#logo_as_new')
 						.header__nav
 							+nav
 						.header__drop
